--- a/CoffeeApp-BE/web/WEB-INF/web.xml
+++ b/CoffeeApp-BE/web/WEB-INF/web.xml
@@ -2,11 +2,11 @@
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     <servlet>
         <servlet-name>ItemServlet</servlet-name>
-        <servlet-class>controller.ItemServlet</servlet-class>
+        <servlet-class>servlets.ItemServlet</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>LoginServlet</servlet-name>
-        <servlet-class>controller.LoginServlet</servlet-class>
+        <servlet-class>servlets.LoginServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>ItemServlet</servlet-name>
